--- a/home.css
+++ b/home.css
@@ -5,7 +5,7 @@
   align-items: center; /* Centers vertically */
   width: 100%;
   height: 100vh;
-  background-image: url("../home4.jpg");
+  background-image: url("home4.jpg");
   background-size:cover; /* Ensures the image fits within the container */
   background-position: center; /* Centers the background image */
   padding-left: 70px; /* Adjust left padding for desired spacing */
@@ -93,7 +93,7 @@
 
 .banner {
     height: 105vh;
-    background-image: url("../home4.jpg");
+    background-image: url("home4.jpg");
     background-size:contain; /* Ensures the image fits within the container */
     background-position: center; /* Centers the background image */
     padding-left: 20px; /* Adjust left padding for desired spacing */
@@ -138,7 +138,7 @@
 
 .banner {
     height: 85vh;
-    background-image: url("../home4.jpg");
+    background-image: url("home4.jpg");
     background-size:contain; /* Ensures the image fits within the container */
     background-position: center; /* Centers the background image */
     padding-left: 20px; /* Adjust left padding for desired spacing */
